Creation of docker-compose.yml file. Change from H2 to MongoDB (in Docker container) and implementation of endpoint findAll
